--- a/faculty/faculty_styles.css
+++ b/faculty/faculty_styles.css
@@ -15,7 +15,7 @@ body
 #container
 {
     position: relative;
-    background-color: gray;
+    background-color: rgba(0,0,0,0.4);
     width: 85%;
     min-height: 600px;
     height: fit-content;
