Add instructor add function

--- a/draw_hw/templates/registration/password_reset_complete.html
+++ b/draw_hw/templates/registration/password_reset_complete.html
@@ -7,9 +7,19 @@
 
 {% block body_content %}
 <body>
-    <h1>All done!</h1>
-    
-    <p>Your new password has been set! You should be all set to <a href="{% url 'accounts:login' %}">log in</a>.
     </p>
+    <div id="main">
+        <div id="name">
+            <h3> <strong>D</strong>aiki<strong>R</strong>oth<strong>A</strong>bhijit<strong>W</strong>enhao HomeWork.com</h3>
+            <hr size="3">
+        </div>
+        <h1>All done!</h1>
+    
+        <p>Your new password has been set! You should be all set to <a href="{% url 'accounts:login' %}">log in</a>.
+
+        <div id="footer">
+            Copyright &copy; drawHW 2020
+        </div> 
+    </div>
 </body>
 {% endblock %}
