--- a/draw_hw/instructor/templates/instructor/editHw.html
+++ b/draw_hw/instructor/templates/instructor/editHw.html
@@ -5,6 +5,9 @@
 {% block css_tag %}
     <link rel="stylesheet" type="text/css" href="{% static 'accounts/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'instructor/faculty_styles.css' %}">
+
+    <link href="http://cdn.jsdelivr.net/timepicker.js/latest/timepicker.min.css" rel="stylesheet"/>
+
 {% endblock %}
 {% block body_content %}
     <div id="name">
@@ -51,8 +54,18 @@
         Copyright &copy; drawHW 2020
     </div> 
 
+    <script src="http://cdn.jsdelivr.net/timepicker.js/latest/timepicker.min.js"></script>
     <script>
+        var timepicker = new TimePicker('duetime', {
+            lang: 'en',
+            theme: 'dark'
+        });
+        timepicker.on('change', function(evt) {
         
+            var value = (evt.hour || '00') + ':' + (evt.minute || '00');
+            evt.element.value = value;
+
+        });
     </script>
 
 {% endblock %}
