--- a/draw_hw/instructor/templates/instructor/editHw.html
+++ b/draw_hw/instructor/templates/instructor/editHw.html
@@ -34,7 +34,7 @@
             </ul>
 
         </div>
-        <div id="info" style="padding-top:15px">
+        <div id="info" style="padding-top:15px; color: black;">
                 Upload PDF File(s):<br>
         
             <form action="">
