--- a/draw_hw/instructor/templates/instructor/home.html
+++ b/draw_hw/instructor/templates/instructor/home.html
@@ -24,7 +24,7 @@
             
             <ul>
                 {% for course in courses %}
-                    <li><a href="{% url 'instructor:course_detail' %}">{{ course.class_name }}</a></li>
+                    <li><a href="{% url 'instructor:course_detail' course.pk %}">{{ course.class_name }}</a></li>
                 {% endfor %}            
             </ul>
         </div>
