--- a/draw_hw/accounts/templates/accounts/login.html
+++ b/draw_hw/accounts/templates/accounts/login.html
@@ -2,7 +2,6 @@
 {% block title_tag %}Login{% endblock %}
 {% load static %}
 {% load widget_tweaks %}
-
 {% block css_tag %}<link rel="stylesheet" type="text/css" href="{% static 'accounts/style.css' %}">{% endblock %}
 
 {% block body_content %}
@@ -10,14 +9,17 @@
     <div id="main">
         <div id="name">
             <h3> <strong>D</strong>aiki<strong>R</strong>oth<strong>A</strong>bhijit<strong>W</strong>enhao HomeWork.com</h3>
-            <hr size="3">
+            <hr size="3" style="border-color:#cf1717" >
         </div>
 
-        <br>
-        <button id="signin">SIGN IN</button> 
+        <div class=homeimage>
+            <img src="{% static 'accounts/pic/drawHW.png' %}" alt="drawLogo">
+        </div>
+
+        <button id="signin" onclick="ClickSI()">SIGN IN</button> 
         <br><br>
         <a href="{% url 'accounts:signup' %}">
-            <button id="signup">SIGN UP</button>
+            <button id="signup" onclick="ClickSU()">SIGN UP</button>
         </a>
 
         <div id="footer">
@@ -27,11 +29,15 @@
 
     <div class="popSignIn">
         <div id="container">
-            <div class="close">+</div>
+
+            <div class="close" onclick="ClickSI()">+</div>
+            <!--<div class="closeSU">+</div>-->
+
             <div id="logo" class="logoClass">
                 <img src="{% static 'accounts/pic/drawHW.png' %}" >
             </div >
-            <hr style="margin-top: 0; padding-top: 0;">
+
+            <hr style="margin-top: auto; padding-top: auto;">
 
             <div id="loginbox">
                 <h2 style="margin-top:0;">SIGN IN</h2>
@@ -45,17 +51,20 @@
                     <label for="faculty">Faculty</label> 
 
                     <br><br>
+
                     <p class="table">
-                        <label for="username">USERNAME</label><br>
-                        {% render_field form.username class+="inputBox" placeholder="Username" id="username" attr="required" %}
+                        <label for="username">USERNAME</label>
+                        {% render_field form.username class+="inputBox" type="text" id="username" name="username" placeholder="Username" attr="required" %}
                     </p>
                     <p class="table">
-                        <label for="password">PASSWORD</label><br>
-                        {% render_field form.password class+="inputBox" placeholder="Password" id="password" attr="required" %}
-                        <br>
+                        <label for="password">PASSWORD</label>
+                        {% render_field form.password class+="inputBox" type="password" name="password" id="password" placeholder="Password" attr="required" %}
                     </p>
 
-                    <input type="submit" name="submit" id="submit" value="Sign In"> <br><br>
+                    <input type="submit" name="submit" id="submit" value="Sign In"> 
+                    
+                    <br><br>
+                    
                 </form>
 
                 <button id="reset">Reset Password</button>  
@@ -66,6 +75,7 @@
     <div class="popForget">
         <div id="container">
             <div class="closeForget">+</div>
+
             <div id="logo" class="logoClass">
                 <img src="{% static 'accounts/pic/drawHW.png' %}" >
             </div >
@@ -87,6 +97,31 @@
         </div> 
     </div>
 
+    <div class="Clock"> 
+        <script>
+            function startTime() {
+                var today = new Date();
+                var year = today.getFullYear();
+                var month = today.getMonth();
+                var date = today.getDate();
+                var h = today.getHours();
+                var m = today.getMinutes();
+                var s = today.getSeconds();
+                m = checkTime(m);
+                s = checkTime(s);
+                document.getElementById('txt').innerHTML = year + "-" + month + "-" + date + "  " + h + ":" + m + ":" + s;
+                var t = setTimeout(startTime, 500);
+                }
+            function checkTime(i) {
+                if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+                return i;
+                }  
+        </script>
+        <body onload="startTime()">
+            <div id="txt"></div>
+        </body>
+    </div>
+ 
     {% block js_tag %}<script src="{% static 'accounts/functions.js' %}"></script>{% endblock %}
 </body>
 {% endblock %}
