--- a/draw_hw/instructor/templates/instructor/class.html
+++ b/draw_hw/instructor/templates/instructor/class.html
@@ -17,7 +17,7 @@
             
             <ul>
                 <li><a href="{% url 'instructor:instructor' %}">Home</a></li>
-                <li><a href="#">Edit Homework</a></li>
+                <li><a href= "{% url 'instructor:edit_homework' %}">Edit Homework</a></li>
                 <li><a href="#">Edit Grade</a></li>
 
             </ul>
@@ -26,7 +26,7 @@
             <h3 style="margin: 0; color: black; text-align: center; background-color: lightgray;">Courses:</h3>
             <ul>
                 {% for course in courses %}
-                    <li><a href="{% url 'instructor:course_detail' course.pk %}">{{ course.class_name }}</a></li>
+                    <li><a href="{% url 'instructor:course_detail' %}">{{ course.class_name }}</a></li>
                 {% endfor %} 
             </ul>
 
