--- a/draw_hw/instructor/templates/instructor/class.html
+++ b/draw_hw/instructor/templates/instructor/class.html
@@ -17,7 +17,7 @@
             
             <ul>
                 <li><a href="{% url 'instructor:instructor' %}">Home</a></li>
-                <li><a href= "{% url 'instructor:edit_homework' %}">Edit Homework</a></li>
+                <li><a href="#">Edit Homework</a></li>
                 <li><a href="#">Edit Grade</a></li>
 
             </ul>
