--- a/draw_hw/accounts/static/accounts/style.css
+++ b/draw_hw/accounts/static/accounts/style.css
@@ -7,6 +7,7 @@ html
     background-size: cover;
     font-family: Helvetica Neue,helvetica,arial,sans-serif;
 }
+
 body
 {
     text-align: center;
@@ -15,13 +16,14 @@ body
     
     
 }
+
 #loginbox
 {
     clear: both;
     background-color: white;
     width: auto;
     max-width: 100%;
-    height: 73%;
+    height: 63%;
     padding: 0px 0px;
     position: relative;
     color: black;
@@ -35,9 +37,10 @@ body
     
     border-color:  #cf1717;
 }
+
 #logo
 {
-    width: 80%;
+    width: 40%;
     background-color: white;
     margin-left: auto;
     margin-right: auto;
@@ -58,31 +61,29 @@ body
     margin-left: auto;
     margin-right: auto;
 }
-.active
-{
-    background-color: rgb(216,10,10);
-}
+
 #name
 {
-    width: fit-content;
-    background-color: rgba(255, 255, 255, 0.3);
+    min-width: fit-content;
+    background-color: white;
     color: black;
+
     border-style: solid;
-    border-width: 5px;
-    border-style: solid;
+    border-width: 3px;
     border-left: 0;
-    border-style: solid;
     border-right: 0;
-    border-style: solid;
     border-top: 0;
     border-color:  #cf1717;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 0;
     height: 100%;
     overflow: hidden;
-    border-radius: 15px;   
+
+
+    
+    border-radius: 15px;
+    
 }
 
 #container
@@ -92,7 +93,7 @@ body
     margin-left: auto;
     margin-right: auto;
     width: 400px;
-    height: 700px;
+    height: 600px;
     font-family: 'Times New Roman', Times, serif;
     position: relative;
     border-radius: 15px;
@@ -102,6 +103,7 @@ body
     font-family: Helvetica Neue,helvetica,arial,sans-serif;
     
 }
+
 #footer
 {
     width: 100%;
@@ -112,16 +114,19 @@ body
     text-align: center;
     color: black;
 }
+
 strong
 {
     font-size: xx-large;
     color:  #cf1717;
 }
+
 #top
 {
+    
     width: 100%;
     height: 112px;
-    border-radius: 100px;
+    border-radius: 15px;
 }
 
 .inputBox
@@ -129,17 +134,19 @@ strong
     width: 300px;
     display: block;
     margin: 5px auto;
-    padding: 1px;
+    padding: 5px;
     height: 30px;
     background-color: whitesmoke;
     border: none;
     font-size: 1.1875rem;
+
     border-bottom: 1px solid black;
 
     overflow: visible;
 
     
 }
+
 .inputBox:focus
 {
     border: 2px solid #cf1717;
@@ -147,15 +154,15 @@ strong
     color: black;
     outline: none;
 }
+
 button, input[type="submit"]
 {
     
     border-width: 2px;
-    margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 15px;
-    width: 200px;
+    width: 180px;
     background-color: #cf1717;
     color: white;
     border-radius: 25px;
@@ -181,6 +188,7 @@ hr
     margin-left: 15%;
     margin-right: 15%;
 }
+
 .popSignIn
 {
     background-color: rgba(0, 0, 0, 0.6);
@@ -193,6 +201,7 @@ hr
     align-items: center;
 
 }
+
 .popForget
 {
     background-color: rgba(0, 0, 0, 0.6);
@@ -260,10 +269,12 @@ input[type=radio] + label
     border: 1px whitesmoke solid;
 
 }
+
 input[type=radio] + label:hover
 {
     border: 1px #cf1717 dashed;
 } 
+
 /*
 Change background color for label next to checked radio button
 to make it look like highlighted button
@@ -273,26 +284,4 @@ input[type=radio]:checked + label
     background-image: none;
     background-color:#cf1717;
     color: white;
-}
-
-.homeimage img{
-    float: inherit;
-    height: 250px;
-    width: 250px;
-    background-color: rgba(255, 255, 255,0.3);
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20;
-    padding-bottom: 20;
-    position: relative;
-    
-    border-color:  #cf1717;
-    overflow: hidden;
-    border-radius: 15px;
-}
-
-.Clock{
-    margin-top: 25px;
-    font-size: 25px;
 }
