--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -22,7 +22,7 @@ body
     width: auto;
     max-width: 100%;
     height: 63%;
-    padding: 0px 10px;
+    padding: 0px 0px;
     position: relative;
     color: black;
 
@@ -30,7 +30,7 @@ body
     border-top: 0;
     border-right: 0;
     border-left: 0;
-    border-bottom: 0px;
+    border-bottom: 0;
     border-width: 3px;
     
     border-color:  #cf1717;
@@ -58,16 +58,13 @@ body
     margin-left: auto;
     margin-right: auto;
 }
-.active
-{
-    background-color: rgb(216,10,10);
-}
+
 #name
 {
     width: fit-content;
     background-color: rgba(255, 255, 255, 0.3);
     color: black;
-    border-style: solid;
+    border-style: solid
     border-width: 5px;
     border-style: solid;
     border-left: 0;
@@ -121,7 +118,7 @@ strong
 {
     width: 100%;
     height: 112px;
-    border-radius: 100px;
+    border-radius: 15px;
 }
 
 .inputBox
@@ -134,6 +131,7 @@ strong
     background-color: whitesmoke;
     border: none;
     font-size: 1.1875rem;
+    box-sizing: 
     border-bottom: 1px solid black;
 
     overflow: visible;
