--- a/draw_hw/instructor/static/instructor/faculty_styles.css
+++ b/draw_hw/instructor/static/instructor/faculty_styles.css
@@ -221,6 +221,16 @@ hr
     padding: 10px;
 }
 
+.addAnswerForm
+{
+    border: black 2px solid;
+    border-radius: 10px;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+
 
 button, input[type="submit"]
 {
