--- a/draw_hw/instructor/templates/instructor/addAnswer.html
+++ b/draw_hw/instructor/templates/instructor/addAnswer.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'instructor/faculty_styles.css' %}">
 {% endblock %}
 {% block body_content %}
-
+<body>
     <div id="name">
         <h3> <strong>D</strong>aiki<strong>R</strong>oth<strong>A</strong>bhijit<strong>W</strong>enhao HomeWork.com</h3>
         <hr size="3">
@@ -18,7 +18,7 @@
         <div id="topNav">
             <ul>
                 <li><a href="{% url 'instructor:instructor' %}">Home</a></li>
-                <li><a href="{% url 'instructor:assignment' pk %}" class = "active">Add Homework</a></li>
+                <li><a href="{% url 'instructor:assignment' pk %}">Add Homework</a></li>
                 <li><a href="#">Edit Grade</a></li>
                 <li style="float: right;"><a class="logout" href="{% url 'accounts:logout' %}">Logout</a></li>
             </ul>
@@ -39,32 +39,20 @@
 
         <div id="info" style="height: 500px; overflow-y: auto;"> <!-- main code for adding answers (above and below are inhert from faculty)-->
             
-            <h3 style="color: black; text-align: center; background-color: lightgray;">Editing Homework</h3>
-
-            <form action="{% url 'instructor:add_answers' pk pk1 %}" class="editHomeworkForm" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-                
-                <input type="text" name="HWname" id="Homeworkname" placeholder="HomeWork Name" required>
-                <input type="text" name="HWdescription" id="HWdescription" placeholder="Homework Description" required>
-                <label style="color: black; text-align: center; background-color: white;">Select a due date-time: </label>
-                <input type="date" id="duedate" name="duedate" placeholder="yyyy-mm-dd">            
-                <input type="time" id="appt" name="appt">
+            <h3 style="color: black; text-align: center; background-color: lightgray;">Submit Answer Key</h3>
             
+            <form action="{% url 'instructor:add_answers' pk pk1 %}" class="addAnswerForm" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="number" name="questionCount" id="questionCount" placeholder="Enter number of question(s). " required>
                 <br>
-                
-                <input type="submit" name="submit edit" id="submit edit">
-
-                <input type="number" name="questionCount" id="questionCount" placeholder="Enter number of question(s)." required>
-                <br>
-
-                <button onclick="displayInputs()">Enter</button>
-                
                 <p id="inputs" style="color: black; text-align: center;"></p>
+                
             </form>
+            <br>
+            <br>
+            <button onclick="displayInputs()">Enter</button>
             
-        
             
-
         </div>  <!-- End main code -->
     </div>
   
@@ -72,26 +60,10 @@
         Copyright &copy; drawHW 2020
     </div> 
 
-    
-    <!-- script to Edit the answers -->
-    {% block js_tag %}
-    <!-- <script src="http://cdn.jsdelivr.net/timepicker.js/latest/timepicker.min.js"></script>
-    <script>
-        var timepicker = new TimePicker('duetime', {
-            lang: 'en',
-            theme: 'dark'
-        });
-        timepicker.on('change', function(evt) {
-        
-            var value = (evt.hour || '00') + ':' + (evt.minute || '00');
-            evt.element.value = value;
-
-        }); -->
-
-    <script>
+    <!-- script to add the answers -->
+    <script> 
         function displayInputs()
         {
-            
             var count = document.getElementById("questionCount").value;
             if(count.length != 0 && count > 0) // check if null
             {
@@ -111,6 +83,6 @@
             }
         }
     </script>
-    {% endblock %}
     
+</body>
 {% endblock %}
