--- a/draw_hw/instructor/templates/instructor/class.html
+++ b/draw_hw/instructor/templates/instructor/class.html
@@ -34,7 +34,7 @@
             </h3>
             <ul>
                 {% for assignment in assignments %}
-                    <li><a href="{% url 'instructor:add_answers' pk assignment.pk %}">{{ assignment.name }}</a></li>
+                    <li><a href="{% url 'instructor:edit_homework' pk assignment.pk %}">{{ assignment.name }}</a></li>
                 {% endfor %} 
                 <li><a href="#" onclick="history.go(-1)">Go Back</a></li>
             </ul>
